--- a/src/components/Programs/Programs.scss
+++ b/src/components/Programs/Programs.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  padding: 0 2rem 1rem;
+  padding: 0 2rem;
 
   &-header {
     display: flex;
