feat: join and email service

--- a/src/App.css
+++ b/src/App.css
@@ -44,3 +44,11 @@
   cursor: pointer;
   opacity: 0.9;
 }
+
+.title {
+  color: white;
+  font-weight: bold;
+  font-size: 3rem;
+  text-transform: uppercase;
+  font-style: italic;
+}
