--- a/src/App.css
+++ b/src/App.css
@@ -52,3 +52,11 @@
   text-transform: uppercase;
   font-style: italic;
 }
+
+.blur {
+  background: rgba(253, 120, 43, 0.69);
+  position: absolute;
+  border-radius: 50%;
+  filter: blur(150px);
+  z-index: -9;
+}
