--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -2,6 +2,12 @@
   display: flex;
   justify-content: space-between;
 }
+.hero-blur {
+  width: 22rem;
+  height: 30rem;
+  left: 0;
+}
+
 .hero .left-side {
   padding: 2rem;
   padding-top: 1.3rem;
@@ -126,4 +132,4 @@
   width: fit-content;
   margin: 2rem auto;
   padding: 1rem;
-}/*# sourceMappingURL=Hero.css.map */
+} /*# sourceMappingURL=Hero.css.map */
