--- a/src/components/Plans/Plans.css
+++ b/src/components/Plans/Plans.css
@@ -70,3 +70,15 @@
 .plans > :nth-child(2) > .btn {
   color: var(--orange);
 }
+
+.plans-blur-1 {
+  width: 32rem;
+  height: 23rem;
+  left: 0;
+}
+
+.plans-blur-2 {
+  width: 32rem;
+  height: 23rem;
+  right: 0;
+}
