--- a/src/components/Join/Join.css
+++ b/src/components/Join/Join.css
@@ -56,3 +56,20 @@
   color: var(--orange);
   transform: scale(1.05);
 }
+
+@media screen and (max-width: 48rem) {
+  .join {
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .left-j {
+    flex-direction: column;
+    font-size: 2rem;
+  }
+
+  .email-form {
+    flex-direction: column;
+    padding: 1rem;
+    gap: 2rem;
+  }
+}
