--- a/src/components/Programs/Programs.css
+++ b/src/components/Programs/Programs.css
@@ -44,4 +44,17 @@
 .programs .program-details {
   font-size: 0.9rem;
   line-height: 1.6rem;
+}
+
+@media screen and (max-width: 48rem) {
+  .programs-header {
+    flex-direction: column;
+    gap: 1rem;
+    font-size: 2.5rem;
+    align-items: center;
+    justify-content: center;
+  }
+  .programs-cards {
+    flex-direction: column;
+  }
 }/*# sourceMappingURL=Programs.css.map */
