--- a/src/components/Programs/Programs.scss
+++ b/src/components/Programs/Programs.scss
@@ -50,3 +50,17 @@
     }
   }
 }
+
+@media screen and (max-width: 48rem) {
+  .programs-header {
+    flex-direction: column;
+    gap: 1rem;
+    font-size: 2.5rem;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .programs-cards {
+    flex-direction: column;
+  }
+}
