--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -37,8 +37,8 @@
   border-radius: 0.5rem;
   width: 1.5rem;
   height: 1.5rem;
-  position: relative;
-  top: 1.5rem;
-  right: 1rem;
+  position: fixed;
+  top: 3rem;
+  right: 3rem;
   z-index: 101;
 }/*# sourceMappingURL=Header.css.map */
